fix: generation of synthetic triplets
make the generation consistent by setting the random state each time we sample from the dataframe

--- a/Notebooks/2 - generate synthetic triplets.ipynb
+++ b/Notebooks/2 - generate synthetic triplets.ipynb
@@ -882,29 +882,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "e9badf9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "triplets = pd.DataFrame(\n",
-    "    columns=[\n",
-    "        (\"anchor\", \"track_id\"),\n",
-    "        (\"positive\", \"track_id\"),\n",
-    "        (\"negative\", \"track_id\"),\n",
-    "        (\"anchor\", \"genre_top\"),\n",
-    "        (\"positive\", \"genre_top\"),\n",
-    "        (\"negative\", \"genre_top\"),\n",
-    "        (\"anchor\", \"album_id\"),\n",
-    "        (\"positive\", \"album_id\"),\n",
-    "        (\"negative\", \"album_id\"),\n",
-    "        (\"anchor\", \"artist_id\"),\n",
-    "        (\"positive\", \"artist_id\"),\n",
-    "        (\"negative\", \"artist_id\"),\n",
-    "        (\"anchor\", \"genres_all\"),\n",
-    "        (\"positive\", \"genres_all\"),\n",
-    "        (\"negative\", \"genres_all\"),\n",
-    "    ]\n",
+    "    {\n",
+    "        (\"anchor\", \"track_id\"):[],\n",
+    "        (\"positive\", \"track_id\"):[],\n",
+    "        (\"negative\", \"track_id\"):[],\n",
+    "        (\"anchor\", \"genre_top\"):[],\n",
+    "        (\"positive\", \"genre_top\"):[],\n",
+    "        (\"negative\", \"genre_top\"):[],\n",
+    "        (\"anchor\", \"album_id\"):[],\n",
+    "        (\"positive\", \"album_id\"):[],\n",
+    "        (\"negative\", \"album_id\"):[],\n",
+    "        (\"anchor\", \"artist_id\"):[],\n",
+    "        (\"positive\", \"artist_id\"):[],\n",
+    "        (\"negative\", \"artist_id\"):[],\n",
+    "        (\"anchor\", \"genres_all\"):[],\n",
+    "        (\"positive\", \"genres_all\"):[],\n",
+    "        (\"negative\", \"genres_all\"):[],\n",
+    "    }\n",
     ")\n",
     "\n",
     "def triplet_from_tracks(anchor_track: pd.Series, positive_track: pd.Series, negative_track: pd.Series) -> pd.Series:\n",
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "id": "ee1a881c",
    "metadata": {},
    "outputs": [
@@ -951,9 +951,9 @@
     "\n",
     "    triplets_list = []\n",
     "    for _ in range(num_triplets):\n",
-    "        anchor = genre_tracks.sample(n=1).iloc[0]\n",
-    "        positive = genre_tracks[genre_tracks.index != anchor.name].sample(n=1).iloc[0]\n",
-    "        negative = other_tracks.sample(n=1).iloc[0]\n",
+    "        anchor = genre_tracks.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
+    "        positive = genre_tracks[genre_tracks.index != anchor.name].sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
+    "        negative = other_tracks.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
     "\n",
     "        triplet = triplet_from_tracks(anchor, positive, negative)\n",
     "        triplets_list.append(triplet)\n",
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "id": "5902e9f3",
    "metadata": {},
    "outputs": [
@@ -995,9 +995,9 @@
     "\n",
     "    triplets_list = []\n",
     "    for _ in range(num_triplets):\n",
-    "        anchor = artist_tracks.sample(n=1).iloc[0]\n",
-    "        positive = artist_tracks[artist_tracks.index != anchor.name].sample(n=1).iloc[0]\n",
-    "        negative = other_tracks.sample(n=1).iloc[0]\n",
+    "        anchor = artist_tracks.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
+    "        positive = artist_tracks[artist_tracks.index != anchor.name].sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
+    "        negative = other_tracks.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
     "\n",
     "        triplet = triplet_from_tracks(anchor, positive, negative)\n",
     "        triplets_list.append(triplet)\n",
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "id": "62724494",
    "metadata": {},
    "outputs": [
@@ -1043,10 +1043,9 @@
     "\n",
     "    triplets_list = []\n",
     "    for _ in range(num_triplets):\n",
-    "        anchor = album_tracks.sample(n=1).iloc[0]\n",
-    "        positive = album_tracks[album_tracks.index != anchor.name].sample(n=1).iloc[0]\n",
-    "        negative = other_tracks.sample(n=1).iloc[0]\n",
-    "\n",
+    "        anchor = album_tracks.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
+    "        positive = album_tracks[album_tracks.index != anchor.name].sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
+    "        negative = other_tracks.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
     "        triplet = triplet_from_tracks(anchor, positive, negative)\n",
     "        triplets_list.append(triplet)\n",
     "\n",
@@ -1067,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "id": "3d01ceb5",
    "metadata": {},
    "outputs": [],
@@ -1177,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "ad67fe7c",
    "metadata": {},
    "outputs": [
@@ -1197,11 +1196,11 @@
     "NUM_TOTAL_TRIPLETS = 8000\n",
     "random.seed(300)\n",
     "while len(triplets) < NUM_TOTAL_TRIPLETS:\n",
-    "    anchor = small_tracks_df.sample(n=1).iloc[0]\n",
+    "    anchor = small_tracks_df.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
     "    others = small_tracks_df[small_tracks_df.index != anchor.name]\n",
-    "    candidate1 = others.sample(n=1).iloc[0]\n",
+    "    candidate1 = others.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
     "    others = others[others.index != candidate1.name]\n",
-    "    candidate2 = others.sample(n=1).iloc[0]\n",
+    "    candidate2 = others.sample(n=1, random_state=random.randint(0,10000)).iloc[0]\n",
     "    \n",
     "    if (result := heuristic_positive_negative(anchor, candidate1, candidate2)) is None:\n",
     "        continue\n",
@@ -1225,6 +1224,7 @@
     "    ].empty:\n",
     "        continue\n",
     "\n",
+    "    triplet = triplet_from_tracks(anchor, positive, negative)\n",
     "    triplets = pd.concat([triplets, pd.DataFrame([triplet])], ignore_index=True)\n",
     "    \n",
     "    # print progress\n",
@@ -1242,7 +1242,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
+   "id": "831951b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make sure IDs are integers\n",
+    "COLUMNS = [\n",
+    "    (\"anchor\", \"track_id\"),\n",
+    "    (\"positive\", \"track_id\"),\n",
+    "    (\"negative\", \"track_id\"),\n",
+    "    (\"anchor\", \"album_id\"),\n",
+    "    (\"positive\", \"album_id\"),\n",
+    "    (\"negative\", \"album_id\"),\n",
+    "    (\"anchor\", \"artist_id\"),\n",
+    "    (\"positive\", \"artist_id\"),\n",
+    "    (\"negative\", \"artist_id\"),\n",
+    "]\n",
+    "for column in COLUMNS:\n",
+    "    triplets[column] = triplets[column].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "9717d46f",
    "metadata": {},
    "outputs": [
@@ -1255,7 +1278,7 @@
     }
    ],
    "source": [
-    "triplets.to_csv(SYNTHETIC_TRIPLETS_FILE, index=False)\n",
+    "triplets.to_csv(SYNTHETIC_TRIPLETS_FILE, header=True, index=False)\n",
     "print(f\"Saved {len(triplets)} triplets to {SYNTHETIC_TRIPLETS_FILE}\")"
    ]
   }
