refactor: change format of human_triplets

--- a/Notebooks/3 - generate human triplets.ipynb
+++ b/Notebooks/3 - generate human triplets.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "7dfc3676",
    "metadata": {},
    "outputs": [
@@ -643,28 +643,29 @@
     "    if triplet_exists(synthetic_triplets_df, anchor.name, negative.name, positive.name):\n",
     "        continue\n",
     "    if new_triplets and any(\n",
-    "        (triplet[\"anchor\"] == anchor.name and\n",
-    "         triplet[\"other1\"] == positive.name and\n",
-    "         triplet[\"other2\"] == negative.name) or\n",
-    "        (triplet[\"anchor\"] == anchor.name and\n",
-    "         triplet[\"other1\"] == negative.name and\n",
-    "         triplet[\"other2\"] == positive.name)\n",
+    "        (triplet[\"song1\"] == anchor.name and\n",
+    "         triplet[\"song2\"] == positive.name and\n",
+    "         triplet[\"song3\"] == negative.name) or\n",
+    "        (triplet[\"song1\"] == anchor.name and\n",
+    "         triplet[\"song2\"] == negative.name and\n",
+    "         triplet[\"song3\"] == positive.name)\n",
     "        for triplet in new_triplets\n",
     "    ):\n",
     "        continue\n",
     "\n",
     "    new_triplets.append(pd.Series({\n",
-    "        \"anchor\": anchor.name,\n",
-    "        \"other1\": positive.name,\n",
-    "        \"other2\": negative.name,\n",
-    "        \"other1_is_positive\": None\n",
+    "        \"song1\": anchor.name,\n",
+    "        \"song2\": positive.name,\n",
+    "        \"song3\": negative.name,\n",
+    "        \"anchor\": None,\n",
+    "        \"positive\": None,\n",
     "    }))\n",
     "\n",
     "    # print progress\n",
     "    print(f\"Generated {len(new_triplets)} / {NUM_TOTAL_TRIPLETS} triplets.\", end=\"\\r\")\n",
     "\n",
-    "human_triplets = pd.DataFrame(new_triplets, columns=[\"anchor\", \"other1\", \"other2\", \"other1_is_positive\"], dtype=object)\n",
-    "human_triplets[[\"anchor\", \"other1\", \"other2\"]] = human_triplets[[\"anchor\", \"other1\", \"other2\"]].astype(int)"
+    "human_triplets = pd.DataFrame(new_triplets, columns=[\"song1\", \"song2\", \"song3\", \"anchor\", \"positive\"], dtype=object)\n",
+    "human_triplets[[\"song1\", \"song2\", \"song3\"]] = human_triplets[[\"song1\", \"song2\", \"song3\"]].astype(int)"
    ]
   },
   {
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "96371b4f",
    "metadata": {},
    "outputs": [
