refactor: remove index from human triples

--- a/Notebooks/3 - generate human triplets.ipynb
+++ b/Notebooks/3 - generate human triplets.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "96371b4f",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
     }
    ],
    "source": [
-    "human_triplets.to_csv(HUMAN_TRIPLETS_FILE, index=True, index_label=\"triplet_id\")\n",
+    "human_triplets.to_csv(HUMAN_TRIPLETS_FILE)\n",
     "print(f\"\\nSaved {len(human_triplets)} human triplets to {HUMAN_TRIPLETS_FILE}.\")"
    ]
   }
