fix: step scheduler by loss, and adjust learning rates

--- a/Notebooks/4 - train and export model.ipynb
+++ b/Notebooks/4 - train and export model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "03e33151",
    "metadata": {},
    "outputs": [
@@ -51,8 +51,8 @@
     "NUM_LAYERS = 1       # Number of GRU layers\n",
     "BATCH_SIZE = 16       # Small batch size to fit in GPU memory\n",
     "FT_BATCH_SIZE = 4\n",
-    "LEARNING_RATE = 1e-4\n",
-    "FT_LEARNING_RATE = 1e-8 # Learning rate during fine-tuning\n",
+    "LEARNING_RATE = 1e-3\n",
+    "FT_LEARNING_RATE = 1e-6 # Learning rate during fine-tuning\n",
     "NUM_EPOCHS = 50\n",
     "FT_NUM_EPOCHS = 5\n",
     "MAX_AUDIO_DURATION = 10.0  # Max duration in seconds\n",
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "abedb3b3",
    "metadata": {},
    "outputs": [],
@@ -990,6 +990,7 @@
     "    writer: Optional[SummaryWriter] = None,\n",
     "    early_stopping_patience: int = 10,\n",
     "    checkpoint_name:str|None = None,\n",
+    "    scheduler_based_on_epoch: bool = False\n",
     ") -> dict:\n",
     "    \"\"\"\n",
     "    Full training loop with validation, early stopping, and TensorBoard logging.\n",
@@ -1005,7 +1006,7 @@
     "        'lr': []\n",
     "    }\n",
     "\n",
-    "    best_val_accuracy = 0.0\n",
+    "    best_val_accuracy = -0.01\n",
     "    patience_counter = 0\n",
     "    global_step = 0\n",
     "\n",
@@ -1036,7 +1037,7 @@
     "        # Update learning rate\n",
     "        current_lr = optimizer.param_groups[0]['lr']\n",
     "        if scheduler is not None:\n",
-    "            scheduler.step(epoch)\n",
+    "            scheduler.step(epoch if scheduler_based_on_epoch else val_loss) # type: ignore\n",
     "\n",
     "        # Record history\n",
     "        history['train_loss'].append(train_loss)\n",
@@ -1151,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "757f5a20",
    "metadata": {},
    "outputs": [
@@ -1868,6 +1869,148 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "625ccd158e85463f8a072a6bd6a71db0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train Loss: 0.1543 | Train Acc: 0.6566\n",
+      "Val Loss: 0.1559 | Val Acc: 0.6475\n",
+      "Learning Rate: 0.000025\n",
+      "No improvement. Patience: 8/10\n",
+      "\n",
+      "============================================================\n",
+      "Epoch 18/50\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1789c5d9daf14350a4b3180b52cb9af3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch 18 [Train]:   0%|          | 0/350 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a03d3a97a412443288d32032081646e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train Loss: 0.1522 | Train Acc: 0.6668\n",
+      "Val Loss: 0.1616 | Val Acc: 0.6388\n",
+      "Learning Rate: 0.000025\n",
+      "No improvement. Patience: 9/10\n",
+      "\n",
+      "============================================================\n",
+      "Epoch 19/50\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b8be59a79694750b3f6258c719766ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch 19 [Train]:   0%|          | 0/350 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "945763902d274eb0924159746b5d6706",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train Loss: 0.1538 | Train Acc: 0.6546\n",
+      "Val Loss: 0.1544 | Val Acc: 0.6412\n",
+      "Learning Rate: 0.000025\n",
+      "No improvement. Patience: 10/10\n",
+      "\n",
+      "Early stopping triggered after 19 epochs\n",
+      "\n",
+      "Loaded best model from epoch 9 with Val Acc: 0.6587\n",
+      "\n",
+      "============================================================\n",
+      "Final Test Evaluation\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f3ede32f904f4fab8793dedb398b38ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test:   0%|          | 0/101 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.1563 | Test Accuracy: 0.6541\n",
+      "\n",
+      "TensorBoard writer closed.\n"
+     ]
     }
    ],
    "source": [
@@ -1941,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c5bebf28",
    "metadata": {},
    "outputs": [
@@ -1949,8 +2092,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU memory allocated: 266.0 MB\n",
-      "GPU memory reserved: 296.0 MB\n",
+      "GPU memory allocated: 272.1 MB\n",
+      "GPU memory reserved: 304.0 MB\n",
       "GPU memory cleared!\n"
      ]
     }
@@ -1989,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fa64186b",
    "metadata": {},
    "outputs": [
@@ -2003,7 +2146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "271d11b288ee444394dd7e4b27bd05da",
+       "model_id": "21b5b915a716499f817e598f83031583",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2026,7 +2169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae9eec160ff549b6a2458da5edf39840",
+       "model_id": "f437f8b5432d40d5a66b181e3e58e5ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2049,7 +2192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63a884fafa614404a63146ceb507489d",
+       "model_id": "d05b7c1a410b4585a45720bc9389c178",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2133,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "003daa96",
    "metadata": {},
    "outputs": [
@@ -2141,7 +2284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorBoard run: finetuned_finetuned_finetuned_finetuned_audio_embedding_20251205_032721\n",
+      "TensorBoard run: finetuned_audio_embedding_20251205_045508\n",
       "Run 'tensorboard --logdir /home/anthony/Sync/mecomp-nextgen-analysis/Notebooks/../models/runs' to view logs\n",
       "\n",
       "============================================================\n",
@@ -2152,7 +2295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d16d8c89dfeb414cbcf2c989392a250a",
+       "model_id": "4413cdabd3674b53a8f08642881666e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2166,7 +2309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0dd477f0e8a4575971fb2f00d3b5e42",
+       "model_id": "fb2d31d548f8451dbd1279e10fe0d82c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2182,10 +2325,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Train Loss: 0.1796 | Train Acc: 0.6250\n",
-      "Val Loss: 0.1570 | Val Acc: 1.0000\n",
-      "Learning Rate: 0.000001\n",
-      "✓ New best model saved! (Val Acc: 1.0000)\n",
+      "Train Loss: 0.2063 | Train Acc: 0.6250\n",
+      "Val Loss: 0.3452 | Val Acc: 0.5000\n",
+      "Learning Rate: 0.000000\n",
+      "✓ New best model saved! (Val Acc: 0.5000)\n",
       "\n",
       "============================================================\n",
       "Epoch 2/5\n",
@@ -2195,7 +2338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13f6561747ff41f18c56a9b525c6809a",
+       "model_id": "1223fe60dc2c401c8d217ded5cd6fda0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2209,7 +2352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00d6cca99cd643e686a639a318a4835f",
+       "model_id": "f7051ef8ddcb4d33a4654a8a067cf0e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2225,9 +2368,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Train Loss: 0.1925 | Train Acc: 0.6875\n",
-      "Val Loss: 0.1467 | Val Acc: 1.0000\n",
-      "Learning Rate: 0.000001\n",
+      "Train Loss: 0.1767 | Train Acc: 0.5625\n",
+      "Val Loss: 0.3454 | Val Acc: 0.5000\n",
+      "Learning Rate: 0.000000\n",
       "No improvement. Patience: 1/10\n",
       "\n",
       "============================================================\n",
@@ -2238,7 +2381,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d024e7cfdaa24488b134cda1dd1f9735",
+       "model_id": "efe6afd071644599a1095d5f98232f31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2252,7 +2395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e660c736ee24664be1013fb26f2e01a",
+       "model_id": "abe7ee4c70054e63aea57ddd0bf8f7c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2268,9 +2411,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Train Loss: 0.1704 | Train Acc: 0.5625\n",
-      "Val Loss: 0.1553 | Val Acc: 1.0000\n",
-      "Learning Rate: 0.000001\n",
+      "Train Loss: 0.2151 | Train Acc: 0.4375\n",
+      "Val Loss: 0.3474 | Val Acc: 0.5000\n",
+      "Learning Rate: 0.000000\n",
       "No improvement. Patience: 2/10\n",
       "\n",
       "============================================================\n",
@@ -2281,7 +2424,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5f8fa47f38547fe81dad9e31f5309f2",
+       "model_id": "2077584686764d1aada6fec5aee260c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2295,7 +2438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aded2b36ce99426aa898d5219e0fe3c1",
+       "model_id": "598bf66117c84b808711a0ce9d91e906",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2311,9 +2454,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Train Loss: 0.1499 | Train Acc: 0.6250\n",
-      "Val Loss: 0.1559 | Val Acc: 1.0000\n",
-      "Learning Rate: 0.000001\n",
+      "Train Loss: 0.2304 | Train Acc: 0.3750\n",
+      "Val Loss: 0.3370 | Val Acc: 0.5000\n",
+      "Learning Rate: 0.000000\n",
       "No improvement. Patience: 3/10\n",
       "\n",
       "============================================================\n",
@@ -2324,7 +2467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ac4cdf291d743f296bf7adcd4e97b7b",
+       "model_id": "2b1413fedbb54040be8c0be8c6ea7344",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2338,7 +2481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a54e5b697ca7421b88ec9ff1e9c9c96a",
+       "model_id": "e435307d9642452780c50c7875afd2d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2354,12 +2497,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Train Loss: 0.2004 | Train Acc: 0.5000\n",
-      "Val Loss: 0.1477 | Val Acc: 1.0000\n",
-      "Learning Rate: 0.000001\n",
+      "Train Loss: 0.2423 | Train Acc: 0.2500\n",
+      "Val Loss: 0.3411 | Val Acc: 0.5000\n",
+      "Learning Rate: 0.000000\n",
       "No improvement. Patience: 4/10\n",
       "\n",
-      "Loaded best model from epoch 1 with Val Acc: 1.0000\n",
+      "Loaded best model from epoch 1 with Val Acc: 0.5000\n",
       "\n",
       "============================================================\n",
       "Final Test Evaluation\n",
@@ -2369,7 +2512,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d0bc2cb04f74b52a0acff9c19bc8842",
+       "model_id": "c8c3871c832f43c7a2c22f7276181ae0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2384,7 +2527,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.2292 | Test Accuracy: 0.5000\n",
+      "Test Loss: 0.2070 | Test Accuracy: 0.5000\n",
       "\n",
       "TensorBoard writer closed.\n"
      ]
@@ -2464,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "23b5a714",
    "metadata": {},
    "outputs": [
@@ -2481,7 +2624,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1027716/678410817.py:30: DeprecationWarning: You are using the legacy TorchScript-based ONNX export. Starting in PyTorch 2.9, the new torch.export-based ONNX exporter will be the default. To switch now, set dynamo=True in torch.onnx.export. This new exporter supports features like exporting LLMs with DynamicCache. We encourage you to try it and share feedback to help improve the experience. Learn more about the new export logic: https://pytorch.org/docs/stable/onnx_dynamo.html. For exporting control flow: https://pytorch.org/tutorials/beginner/onnx/export_control_flow_model_to_onnx_tutorial.html.\n",
+      "/tmp/ipykernel_1595805/678410817.py:30: DeprecationWarning: You are using the legacy TorchScript-based ONNX export. Starting in PyTorch 2.9, the new torch.export-based ONNX exporter will be the default. To switch now, set dynamo=True in torch.onnx.export. This new exporter supports features like exporting LLMs with DynamicCache. We encourage you to try it and share feedback to help improve the experience. Learn more about the new export logic: https://pytorch.org/docs/stable/onnx_dynamo.html. For exporting control flow: https://pytorch.org/tutorials/beginner/onnx/export_control_flow_model_to_onnx_tutorial.html.\n",
       "  torch.onnx.export(\n",
       "/usr/lib/python3.13/site-packages/torch/onnx/_internal/torchscript_exporter/symbolic_opset9.py:4247: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with GRU can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
       "  warnings.warn(\n"
@@ -2560,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fe959dca",
    "metadata": {},
    "outputs": [
@@ -2571,7 +2714,7 @@
       "Testing with: ../data/fma_small/050/050444.mp3\n",
       "\n",
       "Loaded audio: 661560 samples (30.00 seconds)\n",
-      "Inference time: 58.36 ms\n",
+      "Inference time: 45.93 ms\n",
       "Embedding shape: (1, 64)\n",
       "Embedding (first 10 values): [ 0.09985393 -0.12195764 -0.07028663 -0.00932622  0.04233725  0.16158463\n",
       " -0.0658855  -0.10751224  0.13215011  0.03408099]\n",
@@ -2582,6 +2725,12 @@
       "\n",
       "Max difference between ONNX and PyTorch: 0.000021\n",
       "✓ ONNX export verified - outputs match!\n",
+      "Inference time: 45.93 ms\n",
+      "Embedding shape: (1, 64)\n",
+      "Embedding (first 10 values): [ 0.09985393 -0.12195764 -0.07028663 -0.00932622  0.04233725  0.16158463\n",
+      " -0.0658855  -0.10751224  0.13215011  0.03408099]\n",
+      "\n",
+      "--- PyTorch comparison ---\n",
       "PyTorch embedding (first 10 values): [ 0.09987304 -0.12194771 -0.07028833 -0.00932817  0.04232685  0.16157773\n",
       " -0.06587927 -0.1075229   0.13214414  0.03406434]\n",
       "\n",
