--- a/Notebooks/4 - train and export model.ipynb
+++ b/Notebooks/4 - train and export model.ipynb
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6da69210",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,8 @@
     "    hidden_dim=HIDDEN_DIM,\n",
     "    num_layers=NUM_LAYERS,\n",
     "    sample_rate=SAMPLE_RATE,\n",
-    "    frame_size=FRAME_SIZE\n",
+    "    frame_size=FRAME_SIZE,\n",
+    "    dropout=0.1\n",
     ").to(DEVICE)\n",
     "\n",
     "# Print model summary\n",
