--- a/Notebooks/4 - train and export model.ipynb
+++ b/Notebooks/4 - train and export model.ipynb
@@ -4578,7 +4578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "23b5a714",
    "metadata": {},
    "outputs": [
@@ -4654,7 +4654,7 @@
     "    return onnx_path\n",
     "\n",
     "# Export the model\n",
-    "onnx_path = export_to_onnx(model, MODEL_SAVE_PATH)\n",
+    "onnx_path = export_to_onnx(model, MODEL_SAVE_PATH, opset_version=16)\n",
     "\n",
     "# Verify the ONNX model\n",
     "import onnx\n",
