reexport model with dynamic batch size

--- a/Notebooks/4 - train and export model.ipynb
+++ b/Notebooks/4 - train and export model.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cd313e22",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "fc77e76f",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "6da69210",
    "metadata": {},
    "outputs": [
@@ -1116,10 +1116,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f5da94ca270>"
+       "<graphviz.graphs.Digraph at 0x7fb50253d2b0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1897,7 +1897,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f5da93aa030>"
+       "<graphviz.graphs.Digraph at 0x7fb501e24770>"
       ]
      },
      "execution_count": 7,
@@ -4600,18 +4600,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "23b5a714",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1413672/548436269.py:30: DeprecationWarning: You are using the legacy TorchScript-based ONNX export. Starting in PyTorch 2.9, the new torch.export-based ONNX exporter will be the default. To switch now, set dynamo=True in torch.onnx.export. This new exporter supports features like exporting LLMs with DynamicCache. We encourage you to try it and share feedback to help improve the experience. Learn more about the new export logic: https://pytorch.org/docs/stable/onnx_dynamo.html. For exporting control flow: https://pytorch.org/tutorials/beginner/onnx/export_control_flow_model_to_onnx_tutorial.html.\n",
-      "  torch.onnx.export(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -4625,19 +4617,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/tmp/ipykernel_2198889/3475857847.py:30: DeprecationWarning: You are using the legacy TorchScript-based ONNX export. Starting in PyTorch 2.9, the new torch.export-based ONNX exporter will be the default. To switch now, set dynamo=True in torch.onnx.export. This new exporter supports features like exporting LLMs with DynamicCache. We encourage you to try it and share feedback to help improve the experience. Learn more about the new export logic: https://pytorch.org/docs/stable/onnx_dynamo.html. For exporting control flow: https://pytorch.org/tutorials/beginner/onnx/export_control_flow_model_to_onnx_tutorial.html.\n",
+      "  torch.onnx.export(\n",
       "/usr/lib/python3.13/site-packages/torch/onnx/_internal/torchscript_exporter/symbolic_opset9.py:4247: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with GRU can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "GraphProto('main_graph', input=<1 inputs>, output=<1 outputs>, initializer=<22 initializers>, node=<92 nodes>)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4684,7 +4668,7 @@
     "        #     \"audio\": {0: torch.export.Dim.AUTO, 1: torch.export.Dim.AUTO},\n",
     "        # },\n",
     "        dynamic_axes={\n",
-    "            \"audio\": {1: \"num_samples\"},\n",
+    "            \"audio\": {0: \"batch_size\", 1: \"num_samples\"},\n",
     "            \"embedding\": {},\n",
     "        },\n",
     "    )\n",
@@ -4715,7 +4699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "fe959dca",
    "metadata": {},
    "outputs": [
@@ -4726,7 +4710,7 @@
       "Testing with: ../data/fma_small/075/075786.mp3\n",
       "\n",
       "Loaded audio: 660984 samples (29.98 seconds)\n",
-      "Inference time: 68.01 ms\n",
+      "Inference time: 27.03 ms\n",
       "Embedding shape: (1, 32)\n",
       "Embedding (first 10 values): [ 0.09843674 -0.22012153 -0.02299927 -0.19991453 -0.05110953 -0.09359533\n",
       "  0.13877313  0.01277357 -0.03874467  0.04526782]\n",
